# halu-core

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_phase_6_5_hardening.py  0003_phase_7_5_scoring_calibration.py  0004_phase_8_public_alpha.py  0005_full_agent_foundation.py  0006_episode_runtime_protocol.py  0007_campaign_view_token.py  0008_widen_run_status.py
docs/: api-usage.md  architecture.md  challenge-contract.md  custom-challenge-tutorial.md  quickstart.md  scoring-extension.md
docs/prompts/: hermes.md  openclaw.md
src/halu_core/: __init__.py  app.py  canonical_json.py  cli.py  config.py  db.py  errors.py  logging_config.py  main.py  migrations_meta.py  observability.py  readiness.py  timeutils.py
src/halu_core/api/: agent.py  campaigns.py  dependencies.py  episode_runtime.py  runs.py  runtime_packages.py
src/halu_core/challenges/: base.py  (+7 more)
tests/: conftest.py  test_agent_api.py  test_api.py  test_app_factory.py  test_benchmark_manifest.py  test_build.py  test_challenge_registry.py  test_challenges.py  test_cli.py  test_event_logging.py  test_explanation_service.py  test_full_agent_foundation.py  test_generic_rate_limit.py  test_models.py  test_operational_readiness.py  test_package_contents.py  test_phase8_platform.py  test_prompt_service.py  test_run_service.py  test_scope_and_rate_limit.py  test_scoring.py  test_token_service.py  test_view_token.py
(+46 files in other folders)
